Minecraft options are now saved in settings.json.